2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure on some Linux/mips machines.
	Reported by Sébastien Villemot <sebastien@debian.org>.
	* lispbibl.d (CODE_ADDRESS_RANGE, MAPPABLE_ADDRESS_RANGE_END)
	[UNIX_LINUX && MIPS && !n32]: Change.
	(SINGLEMAP_WORKS) [UNIX_LINUX && MIPS && !n32]: Set to 0.
	* Makefile.devel (multibuild-linux-mips-32): Remove
	build-porting32-gcc-spvw_pure_blocks.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure on some Linux/i386 machines.
	Reported by Sébastien Villemot <sebastien@debian.org>.
	* lispbibl.d (CODE_ADDRESS_RANGE, MAPPABLE_ADDRESS_RANGE_START)
	[UNIX_LINUX && I80386]: Change.
	(SINGLEMAP_WORKS) [UNIX_LINUX && I80386]: Set to 0.
	* Makefile.devel (multibuild-linux-i386): Remove
	build-porting32-gcc-spvw_pure_blocks.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure on some Linux/arm machines.
	Reported by Dr. Werner Fink <werner@suse.de>.
	* lispbibl.d (MAPPABLE_ADDRESS_RANGE_*) [UNIX_LINUX && ARM]: Change.
	(SINGLEMAP_WORKS) [UNIX_LINUX && ARM]: Set to 0.
	* Makefile.devel (multibuild-linux-arm): Remove
	build-porting32-gcc-spvw_pure_blocks.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Use newest libffcall.
	* m4/ffcall.m4 (CL_LIBFFCALL_DOWNLOAD_URL): Point to the libffcall-2.1
	release.
	* NEWS: Likewise.
	* aclocal.m4, src/configure: Regenerated.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure when building in the srcdir.
	Reported by Nelson Beebe.
	* makemake.in: When preprocessing the ari_asm_*.c and sp_asm_*.c files
	in the srcdir, omit the '-I' option.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix compilation error in C++ mode (regression from 2018-02-11).
	* spvw.d (output_mfih): Fix array initializer.

2018-02-11  Bruno Haible  <bruno@clisp.org>

	Bump version number.
	* version.sh: Bump version number to 2.49.91+.
	* version.h, src/configure: Regenerated.

2018-02-11  Bruno Haible  <bruno@clisp.org>
