@@ -1,5 +1,15 @@
 2018-02-17  Bruno Haible  <bruno@clisp.org>
 
+	Fix build failure on some Linux/powerpc machines.
+	Reported by Sébastien Villemot <sebastien@debian.org>.
+	* lispbibl.d (CODE_ADDRESS_RANGE, MAPPABLE_ADDRESS_RANGE_START)
+	[UNIX_LINUX && POWERPC]: Change.
+	(SINGLEMAP_WORKS) [UNIX_LINUX && POWERPC]: Set to 0.
+	* Makefile.devel (multibuild-linux-powerpc): Remove
+	build-porting32-gcc-spvw_pure_blocks.
+
+2018-02-17  Bruno Haible  <bruno@clisp.org>
+
 	Fix build failure on some Linux/mips machines.
 	Reported by Sébastien Villemot <sebastien@debian.org>.
 	* lispbibl.d (CODE_ADDRESS_RANGE, MAPPABLE_ADDRESS_RANGE_END)
